fixes alignment of uppercase vetting button text

--- a/src/style/Nins.scss
+++ b/src/style/Nins.scss
@@ -139,6 +139,7 @@
   line-height: 1.2;
   text-transform: uppercase;
   align-self: flex-start;
+  text-align: left;
 }
 
 .vetting-button-name {
